[gd_scene load_steps=8 format=3 uid="uid://icbl8stqe4lo"]

[ext_resource type="Script" path="res://weapons/red_pistol.gd" id="1_mbd82"]
[ext_resource type="Texture2D" uid="uid://5mf3yeldowcc" path="res://assets/weapons/red_gun_sprite.png" id="2_s85ch"]

[sub_resource type="CircleShape2D" id="CircleShape2D_jc8c0"]
radius = 591.03

[sub_resource type="AtlasTexture" id="AtlasTexture_tcmxw"]
atlas = ExtResource("2_s85ch")
region = Rect2(0, 11, 19, 11)

[sub_resource type="AtlasTexture" id="AtlasTexture_wk3qq"]
atlas = ExtResource("2_s85ch")
region = Rect2(0, 11, 19, 11)

[sub_resource type="AtlasTexture" id="AtlasTexture_p3vko"]
atlas = ExtResource("2_s85ch")
region = Rect2(0, 0, 19, 11)

[sub_resource type="SpriteFrames" id="SpriteFrames_6kvj1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tcmxw")
}],
"loop": true,
"name": &"default",
"speed": 0.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wk3qq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p3vko")
}],
"loop": true,
"name": &"shoot",
"speed": 24.0
}]

[node name="red_pistol" type="Area2D"]
collision_layer = 0
collision_mask = 2
script = ExtResource("1_mbd82")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_jc8c0")

[node name="WeaponPivot" type="Marker2D" parent="."]

[node name="Pistol" type="AnimatedSprite2D" parent="WeaponPivot"]
unique_name_in_owner = true
texture_filter = 1
position = Vector2(55, -2)
scale = Vector2(2.09312, 1.79486)
sprite_frames = SubResource("SpriteFrames_6kvj1")
autoplay = "default"

[node name="ShootingPoint" type="Marker2D" parent="WeaponPivot/Pistol"]
unique_name_in_owner = true
position = Vector2(3.93835, -2.06614)

[node name="Timer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.6
autostart = true

[connection signal="animation_looped" from="WeaponPivot/Pistol" to="." method="_on_animated_sprite_2d_animation_looped"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
